--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,25 @@
 </head>
 <body>
 
+  <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <a class="navbar-brand" href="/">
+          Bev.it
+        </a>
+      </div>
+    </div>
+  </nav>
+
 <%= yield %>
 
 </body>
+
+  <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
+    <div class="container-fluid">
+      <div class="navbar-header">
+        <%= link_to "All Drinks", drinks_path %>
+      </div>
+    </div>
+  </nav>
 </html>
