home page links to categories page

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -25,7 +25,8 @@
   <nav class="navbar navbar-default navbar-fixed-bottom" role="navigation">
     <div class="container-fluid">
       <div class="navbar-header">
-        <%= link_to "All Drinks", drinks_path %>
+        <%= link_to "All Drinks", drinks_path %> |
+        <%= link_to "Categories", categories_path %>
       </div>
     </div>
   </nav>
