--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,8 @@
     <div class="container-fluid">
       <div class="navbar-header">
         <%= link_to "All Drinks", drinks_path %> |
-        <%= link_to "Categories", categories_path %>
+        <%= link_to "Categories", categories_path %> |
+        <%= link_to "Cabinet", cabinet_path %>
       </div>
     </div>
   </nav>
