--- a/app/views/drinks/index.html.erb
+++ b/app/views/drinks/index.html.erb
@@ -1,3 +1,23 @@
 <h1 class="page-header">
   All Drinks
 </h1>
+
+<table class="table">
+  <thead>
+    <th>
+      Drink
+    </th>
+  </thead>
+  <tbody>
+    <% @drinks.each do |drink| %>
+      <tr>
+        <td>
+          <%= drink.name %>
+        </td>
+        <td>
+          <%= link_to "View Drink", drink_path(drink), class:"btn btn-info" %>
+        </td>
+      </tr>
+    <% end %>
+  </tbody>
+</table>
