setup factories for testing; users can search by category

--- a/app/views/drinks/categories.html.erb
+++ b/app/views/drinks/categories.html.erb
@@ -1,1 +1,8 @@
 <h1 class="page-header">Categories</h1>
+
+<div class="cat-button"><%= link_to "After Dinner Cocktail", "categories/After_Dinner_Cocktail", class: "btn btn-primary center-block" %></div>
+<div class="cat-button"><%= link_to "All Day Cocktail", "categories/All_Day_Cocktail", class: "btn btn-primary center-block" %></div>
+<div class="cat-button"><%= link_to "Before Dinner Cocktail", "categories/Before_Dinner_Cocktail", class: "btn btn-primary center-block" %></div>
+<div class="cat-button"><%= link_to "Hot Drink", "categories/Hot_Drink", class: "btn btn-primary center-block" %></div>
+<div class="cat-button"><%= link_to "Longdrink", "categories/Longdrink", class: "btn btn-primary center-block" %></div>
+<div class="cat-button"><%= link_to "Sparkling Cocktail", "categories/Sparkling Cocktail", class: "btn btn-primary center-block" %></div>
