--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -2,13 +2,13 @@
 
 <%= form_tag(list_by_ingredient_path, method: "get", class: "form-horizontal") do %>
   <div class="form-group">
-    <%= label_tag(:ingredients, "", class: "col-sm-1 control-label glyphicon glyphicon-search") %>
-    <div class="col-sm-10">
-      <%= text_field_tag(:ingredients, "", class: "form-control", placeholder: "Ingredients") %>
+    <%= label_tag(:ingredients, "", class: "col-xs-1 control-label glyphicon glyphicon-search") %>
+    <div class="col-xs-10">
+      <%= text_field_tag(:ingredients, "", class: "form-control", placeholder: "Example: tequila, lime juice, triple sec") %>
     </div>
   </div>
   <div class="form-group">
-    <div class="col-sm-offset-1 col-sm-10">
+    <div class="col-xs-offset-1 col-xs-10">
       <%= submit_tag("Search", class: "btn btn-default") %>
     </div>
   </div>
