users can see all drinks that include a specified ingredient

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,3 +24,16 @@ body {
 .cat-button {
   margin-bottom: 8px;
 }
+
+.search-instructions {
+  margin-right: 5%;
+}
+
+.options-buttons {
+  margin-left: 2%;
+}
+
+.options {
+  position: relative;
+  right: 2%;
+}
