--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "All Drinks", drinks_path %></li>
             <li><%= link_to "Categories", categories_path %></li>
+            <li><%= link_to "Cabinet", cabinet_path %></li>
           </ul>
         </div><!-- /.navbar-collapse -->
       </div><!-- /.container-fluid -->
