--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,5 +1,7 @@
 <h1 class="page-header">Welcome to Bev.it!</h1>
 
+<h4 class="col-xs-offset-1">What ingredients do you have? <small class="text-muted">(separate with a comma and a space):</small></h3>
+
 <%= form_tag(list_by_ingredient_path, method: "get", class: "form-horizontal") do %>
   <div class="form-group">
     <%= label_tag(:ingredients, "", class: "col-xs-1 control-label glyphicon glyphicon-search") %>
@@ -13,3 +15,12 @@
     </div>
   </div>
 <% end %>
+
+<div class="options col-xs-offset-1">
+  <h4 class="col-xs-11">You can also view All Drinks, search by Category, or view a Cabinet of drinks that contain a certain ingredient:</h3>
+  <div class="options-buttons">
+    <%= link_to "All Drinks", drinks_path, class: "btn btn-success" %>
+    <%= link_to "Categories", categories_path, class: "btn btn-primary" %>
+    <%= link_to "Cabinet", cabinet_path, class: "btn btn-info" %>
+  </div>
+</div>
