--- a/app/views/drinks/cabinet_list.html.erb
+++ b/app/views/drinks/cabinet_list.html.erb
@@ -1,3 +1,3 @@
-<h1 class="page-header">Drinks with <%= params["ingredient"].capitalize %></h1>
+<h1 class="page-header">Drinks with <%= @user_ing.capitalize %></h1>
 
 <%= render "drinks" %>
