mobile navbar logo fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,7 +20,8 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/"><%= image_tag "Bevitlogo.png", class: "logo img-responsive" %></a>
+          <!-- <a class="navbar-brand" href="/">Bev.it</a> -->
+          <a class="" href="/"><%= image_tag "Bevitlogo.png", class: "logo img-responsive" %></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
