absolute footer fix

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
       </div><!-- /.container-fluid -->
     </nav>
 
-  <div class="content container-fluid">
+  <div class="main-content container-fluid">
     <%= yield %>
   </div>
 
