--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -17,12 +17,30 @@
 @import 'bootstrap-sprockets';
 @import 'bootstrap';
 
-html {
+html, body {
+  margin: 0;
+  padding: 0;
   height: 100%;
 }
 
 body {
-  margin-top: 40px;
+  margin-top: 60px;
+}
+
+.logo {
+  width: 25px;
+}
+
+.description {
+  display: inline-block;
+}
+
+.welcome-header {
+  margin-top: 20px;
+}
+
+.header-logo {
+  width: 9%;
 }
 
 .cat-button {
@@ -42,24 +60,25 @@ body {
   right: 2%;
 }
 
+.main-content {
+  position: relative;
+  min-height: 100%;
+}
+
+.content {
+  width: 100%;
+  height: 100%;
+  padding-bottom: 80px;
+}
+
 .footer {
+  width: 100%;
+  height: 40px;
   position: absolute;
-  bottom: 0px;
+  bottom: 0;
+  left: 0;
 }
 
 .footer-image {
-  width: 40px;
-  margin-bottom: 10px;
-}
-
-.logo {
-  width: 8%;
-}
-
-.description {
-  display: inline-block;
-}
-
-.welcome-header {
-  margin-top: 20px;
+  width: 32px;
 }
