--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,30 +1,32 @@
-<div class="welcome-header text-center">
-  <h1 class="description page-header">Welcome to Bev.it!</h1>
-  <%= image_tag "Bevitlogo.png", class: "logo" %>
-</div>
-
-<h4 class="col-xs-offset-1">What ingredients do you have? <small class="text-muted">(separate with a comma and a space):</small></h3>
-
-<%= form_tag(list_by_ingredient_path, method: "get", class: "form-horizontal") do %>
-  <div class="form-group">
-    <%= label_tag(:ingredients, "", class: "col-xs-1 control-label glyphicon glyphicon-search") %>
-    <div class="col-xs-10">
-      <%= text_field_tag(:ingredients, "", class: "form-control", placeholder: "Example: tequila, lime juice, triple sec") %>
-    </div>
+<div class="content">
+  <div class="welcome-header text-center">
+    <h1 class="description page-header">Welcome to Bev.it!</h1>
+    <%= image_tag "Bevitlogo.png", class: "header-logo" %>
   </div>
-  <div class="form-group">
-    <div class="col-xs-offset-1 col-xs-10">
-      <%= submit_tag("Search", class: "btn btn-default") %>
-    </div>
-  </div>
-<% end %>
 
-<div class="options col-xs-offset-1">
-  <h4 class="col-xs-12">You can also view All Drinks, search by Category, or view a Cabinet of drinks that contain a certain ingredient:</h3>
-  <div class="options-buttons">
-    <%= link_to "All Drinks", drinks_path, class: "btn btn-success" %>
-    <%= link_to "Categories", categories_path, class: "btn btn-primary" %>
-    <%= link_to "Cabinet", cabinet_path, class: "btn btn-info" %>
+  <h4 class="col-xs-offset-1">What ingredients do you have? <small class="text-muted">(separate with a comma and a space):</small></h3>
+
+  <%= form_tag(list_by_ingredient_path, method: "get", class: "form-horizontal") do %>
+    <div class="form-group">
+      <%= label_tag(:ingredients, "", class: "col-xs-1 control-label glyphicon glyphicon-search") %>
+      <div class="col-xs-10">
+        <%= text_field_tag(:ingredients, "", class: "form-control", placeholder: "Example: tequila, lime juice, triple sec") %>
+      </div>
+    </div>
+    <div class="form-group">
+      <div class="col-xs-offset-1 col-xs-10">
+        <%= submit_tag("Search", class: "btn btn-default") %>
+      </div>
+    </div>
+  <% end %>
+
+  <div class="options col-xs-offset-1">
+    <h4 class="col-xs-12">You can also view All Drinks, search by Category, or view a Cabinet of drinks that contain a certain ingredient:</h3>
+    <div class="options-buttons">
+      <%= link_to "All Drinks", drinks_path, class: "btn btn-success" %>
+      <%= link_to "Categories", categories_path, class: "btn btn-primary" %>
+      <%= link_to "Cabinet", cabinet_path, class: "btn btn-info" %>
+    </div>
   </div>
 </div>
 
