logo changes, home page style

--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,8 +1,5 @@
 <div class="content">
-  <div class="welcome-header text-center">
-    <h1 class="description page-header">Welcome to Bev.it!</h1>
-    <%= image_tag "Bevitlogo.png", class: "header-logo" %>
-  </div>
+  <%= image_tag "Bevitlogo.png", class: "header-logo center-block" %>
 
   <h4 class="col-xs-offset-1">What ingredients do you have? <small class="text-muted">(separate with a comma and a space):</small></h3>
 
