--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,7 @@ html, body {
 }
 
 body {
+  height: 90%;
   margin-top: 60px;
 }
 
@@ -40,7 +41,8 @@ body {
 }
 
 .header-logo {
-  width: 9%;
+  margin: 40px auto;
+  width: 12%;
 }
 
 .cat-button {
