--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -20,14 +20,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <!-- <a class="navbar-brand" href="/">Bev.it</a> -->
-          <a class="" href="/"><%= image_tag "Bevitlogo.png", class: "logo img-responsive" %></a>
+          <a class="navbar-brand" href="/">Bev.it</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><%= link_to "Home", root_path %></li>
             <li><%= link_to "All Drinks", drinks_path %></li>
             <li><%= link_to "Categories", categories_path %></li>
             <li><%= link_to "Cabinet", cabinet_path %></li>
