categories button styling; no drinks found message

--- a/app/views/drinks/cabinet_list.html.erb
+++ b/app/views/drinks/cabinet_list.html.erb
@@ -1,3 +1,10 @@
 <h1 class="page-header">Drinks with <%= @user_ing.capitalize %></h1>
 
-<%= render "drinks" %>
+<% if !@drinks.empty? %>
+  <%= render "drinks" %>
+<% else %>
+  <h4>No drinks found! Tips:</h4>
+  <ul>
+    <li>For rum, make sure to specify 'white rum' or 'dark rum'</li>
+  </ul>
+<% end %>
