--- a/app/views/drinks/index.html.erb
+++ b/app/views/drinks/index.html.erb
@@ -1,5 +1,12 @@
 <h1 class="page-header">
   All Drinks
 </h1>
-
-<%= render "drinks" %>
+<% if @drinks %>
+  <%= render "drinks" %>
+<% else %>
+  <h4>No drinks found! Tips</h4>
+  <ul>
+    <li>Make sure to separate ingredients by a comma and a space.</li>
+    <li>For rum, make sure to specify 'white rum' or 'dark rum'</li>
+  </ul>
+<% end %>
